[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/RewardMenu/RewardMenu.gd" type="Script" id=2]

[node name="RewardMenu" type="Control"]
pause_mode = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
pause_mode = 1
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2

[node name="OpenDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="OpenDelay" to="." method="_on_OpenDelay_timeout"]
